--- a/omnifood.html
+++ b/omnifood.html
@@ -57,15 +57,15 @@
     </div>
     <div class="row">
       <!-- 第二區塊：features，這裏要開始應用grid -->
-      <div class="col span-1-of-4">
-        <ion-icon class=" infinite-outline" name="infinite-outline"></ion-icon>
+      <div class="col span-1-of-4  items">
+        <ion-icon class=" infinite-outline icon-big" name="infinite-outline"></ion-icon>
         <h3>Up to 365 days/year</h3>
         <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can
           also choose
           to order more flexibly if that's your style.</p>
       </div>
-      <div class="col span-1-of-4">
-        <ion-icon class="stopwatch-outline" name="stopwatch-outline"></ion-icon>
+      <div class="col span-1-of-4 items">
+        <ion-icon class="stopwatch-outline icon-big" name="stopwatch-outline"></ion-icon>
 
         <h3>Ready in 20 minutes</h3>
         <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We
@@ -73,15 +73,15 @@
           the best chefs in each town to ensure that you're 100% happy.
         </p>
       </div>
-      <div class="col span-1-of-4">
-        <ion-icon class="nutrition-outline" name="nutrition-outline"></ion-icon>
+      <div class="col span-1-of-4 items">
+        <ion-icon class="nutrition-outline icon-big" name="nutrition-outline"></ion-icon>
         <h3>100% organic</h3>
         <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics.
           Good for your
           health, the environment, and it also tastes better!</p>
       </div>
-      <div class="col span-1-of-4">
-        <ion-icon class="cart-outline" name="cart-outline"></ion-icon>
+      <div class="col span-1-of-4 items ">
+        <ion-icon class="cart-outline icon-big" name="cart-outline"></ion-icon>
         <h3>Order anything</h3>
         <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from
           our menu
