--- a/omnifood.html
+++ b/omnifood.html
@@ -92,6 +92,63 @@
 
   </section>
 
+  <section class="section-maels">
+    <!-- 要製作2列各4格的食物照片，這裏使用ul,li的方式排列 -->
+    <ul class="meals-showcase">
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/1.jpg" alt="Korean bibimbap with egg and vegetables">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/3.jpg" alt="Chicken breast steak with vegetables">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/4.jpg" alt="Autumn pumpkin soup">
+        </figure>
+      </li>
+
+
+    </ul>
+
+    <ul class="meals-showcase">
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/5.jpg" alt="Paleo beef steak with vegetables">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/6.jpg" alt="Healthy baguette with egg and vegetables">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/7.jpg" alt="Burger with cheddar and bacon">
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./Omnifood Contents/8.jpg" alt="Granola with cherries and strawberries">
+        </figure>
+      </li>
+
+
+    </ul>
+
+
+
+  </section>
+
+
 
 
 
@@ -104,5 +161,13 @@
 </html>
 
 
-<!-- S
+<!-- 
+  1.	Korean bibimbap with egg and vegetables
+2.	Simple italian pizza with cherry tomatoes
+3.	Chicken breast steak with vegetables
+4.	Autumn pumpkin soup
+5.	Paleo beef steak with vegetables
+6.	Healthy baguette with egg and vegetables
+7.	Burger with cheddar and bacon
+8.	Granola with cherries and strawberries
  -->
