--- a/omnifood.html
+++ b/omnifood.html
@@ -92,9 +92,9 @@
 
   </section>
 
-  <section class="section-maels">
+  <section class="section-meals">
     <!-- 要製作2列各4格的食物照片，這裏使用ul,li的方式排列 -->
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure>
           <img src="./Omnifood Contents/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -119,7 +119,7 @@
 
     </ul>
 
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure>
           <img src="./Omnifood Contents/5.jpg" alt="Paleo beef steak with vegetables">
@@ -150,6 +150,41 @@
 
 
 
+  <section class="meal-steps">
+    <!-- 在row裡面，放一個h2標題，在增加一個row的div，使用grid兩欄的class -->
+    <div class="row">
+      <h2>How it works - Simple as 1, 2, 3</h2>
+    </div>
+    <div class="row">
+      <!-- 左欄 -->
+      <div class="col span-2-of-4  steps-box">
+        <img src="./Omnifood Contents/app-iPhone.png" alt="Omnifood-app" class="app-screen">
+      </div>
+      <!-------- 右欄   step-boxs------>
+      <div class="col span-2-of-4  steps-box">
+        <div class="work-step ">
+          <div>1</div>
+          <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+        </div>
+        <div class="work-step">
+          <div>2</div>
+          <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+        </div>
+        <div class="work-step">
+          <div>3</div>
+          <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+        </div>
+        <!------- 與步驟同一欄，下載的按鈕使用<a> ------>
+        <a href="#" class="btn-app"><img src="./Omnifood Contents/download-app.svg" alt="apple store button"></a>
+        <a href="#" class="btn-app"><img src="./Omnifood Contents/download-app-android.png" alt="play store button"></a>
+
+      </div>
+    </div>
+
+
+  </section>
+
+
 
 
 
@@ -162,12 +197,7 @@
 
 
 <!-- 
-  1.	Korean bibimbap with egg and vegetables
-2.	Simple italian pizza with cherry tomatoes
-3.	Chicken breast steak with vegetables
-4.	Autumn pumpkin soup
-5.	Paleo beef steak with vegetables
-6.	Healthy baguette with egg and vegetables
-7.	Burger with cheddar and bacon
-8.	Granola with cherries and strawberries
+  Title: How it works - Simple as 1, 2, 3
+
+
  -->
