--- a/omnifood.html
+++ b/omnifood.html
@@ -186,6 +186,126 @@
 
 
 
+  <section class="section-cities">
+    <div class="row">
+      <h2>We're currently in these cities</h2>
+    </div>
+    <div class="row">
+      <!-- 第一個地點 -->
+      <div class="col span-1-of-4 items">
+        <img src="./Omnifood Contents/lisbon-3.jpg" alt="">
+        <h3>Lisbon</h3>
+        <div class="city-features">
+          <ion-icon name="person" class="person icon-small"></ion-icon>
+          1600+ happy eaters
+        </div>
+        <div class="city-features">
+          <ion-icon name="star" class="star icon-small"></ion-icon>
+          60+ top chefs
+        </div>
+        <div class="city-features">
+          <ion-icon name="logo-twitter" class="logo-twitter icon-small"></ion-icon>
+          <a href="#"> @omnifood_lx</a>
+        </div>
+      </div>
+      <!-- 第二個地點 -->
+      <div class="col span-1-of-4 items">
+        <img src="./Omnifood Contents/san-francisco.jpg" alt="">
+        <h3>San Francisco</h3>
+        <div class="city-features">
+          <ion-icon name="person" class="person icon-small"></ion-icon>
+          3700+ happy eaters
+        </div>
+        <div class="city-features">
+          <ion-icon name="star" class="star icon-small"></ion-icon>
+          160+ top chefs
+        </div>
+        <div class="city-features">
+          <ion-icon name="logo-twitter" class="logo-twitter icon-small"></ion-icon>
+          <a href="#"> @omnifood_sf</a>
+        </div>
+      </div>
+      <!-- 第三個地點 -->
+      <div class="col span-1-of-4 items">
+        <img src="./Omnifood Contents/berlin.jpg" alt="">
+        <h3>Berlin</h3>
+        <div class="city-features">
+          <ion-icon name="person" class="person icon-small "></ion-icon>
+          2300+ happy eaters
+        </div>
+        <div class="city-features">
+          <ion-icon name="star" class="star icon-small"></ion-icon>
+          110+ top chefs
+        </div>
+        <div class="city-features">
+          <ion-icon name="logo-twitter" class="logo-twitter icon-small"></ion-icon>
+          <a href="#"> @omnifood_berlin</a>
+        </div>
+      </div>
+      <!-- 第四個地點 -->
+      <div class="col span-1-of-4 items">
+        <img src="./Omnifood Contents/london.jpg" alt="">
+        <h3>London</h3>
+        <div class="city-features">
+          <ion-icon name="person" class="person icon-small"></ion-icon>
+          1200+ happy eaters
+        </div>
+        <div class="city-features">
+          <ion-icon name="star" class="star icon-small"></ion-icon>
+          50+ top chefs
+        </div>
+        <div class="city-features">
+          <ion-icon name="logo-twitter" class="logo-twitter icon-small"></ion-icon>
+          <a href="#"> @omnifood_london</a>
+        </div>
+
+      </div>
+
+  </section>
+
+  <section class="section-testimonials">
+    <div class="row">
+      <h2>Our customers can't live without us</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+
+        <blockquote>
+          Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a
+          life-saver. Now that I got used to it, I couldn't live without my daily meals!
+          <cite><img src="./Omnifood Contents/customer-1.jpg" alt="">Alberto Duncan</cite>
+        </blockquote>
+
+      </div>
+      <div class="col span-1-of-3">
+
+        <blockquote>
+          Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here
+          in Lisbon,
+          but no one comes even close to Omifood. Me and my family are so in love!
+          <cite><img src="./Omnifood Contents/customer-2.jpg" alt="">Joana Silva</cite>
+        </blockquote>
+
+      </div>
+
+      <div class="col span-1-of-3">
+
+        <blockquote>
+          I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up
+          with
+          Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+          <cite><img src="./Omnifood Contents/customer-3.jpg" alt="">Milton Chapman</cite>
+        </blockquote>
+
+      </div>
+
+    </div>
+
+
+
+  </section>
+
+
 
 
 
@@ -197,7 +317,17 @@
 
 
 <!-- 
-  Title: How it works - Simple as 1, 2, 3
+  Title: 
+
+
+(Alberto Duncan)
+
+
+(Joana Silva)
+
+I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+(Milton Chapman)
+
 
 
  -->
