--- a/omnifood.html
+++ b/omnifood.html
@@ -298,13 +298,135 @@
         </blockquote>
 
       </div>
+    </div>
+
+  </section>
+
+  <!-- 在每個欄位裡面，又加一個box的div，來放置內容 -->
+
+  <section class="section-plans">
+    <div class="row">
+      <h2>Start eating healthy today</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+
+        <div class="plan-box">
+          <div>
+            <h3>Premium</h3>
+            <p class="plan-price">$399 /per month</p>
+            <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>1 meal every day
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Order 24/7
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Access to newest creations
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Free delivery
+              </li>
+            </ul>
+
+          </div>
+          <div>
+            <a href="#" class="btn btn-full">Sign uo now </a>
+          </div>
+
+
+        </div>
+
+
+      </div>
+
+      <div class="col span-1-of-3">
+
+        <div class="plan-box">
+          <div>
+            <h3>Pro</h3>
+            <p class="plan-price">$149/per month</p>
+            <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>1 meal 10 days/month
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Order 24/7
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Access to newest creations
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Free delivery
+              </li>
+            </ul>
+
+
+          </div>
+          <div>
+            <a href="#" class="btn btn-ghost">Sign uo now </a>
+          </div>
+
+        </div>
+
+
+      </div>
+
+
+
+      <div class="col span-1-of-3">
+
+        <div class="plan-box">
+          <div>
+            <h3>Starter</h3>
+            <p class="plan-price">$19 / per meal</p>
+            <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>1 meal
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Order from 8 am to 12 pm
+              </li>
+              <li>
+                <ion-icon name="close-outline " class="icon-p"></ion-icon>
+              </li>
+              <li>
+                <ion-icon name="checkmark-outline " class="icon-p"></ion-icon>Free delivery
+              </li>
+            </ul>
+
+
+          </div>
+
+          <div>
+            <a href="#" class="btn btn-ghost">Sign uo now </a>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+
 
     </div>
 
 
 
-  </section>
 
+  </section>
 
 
 
@@ -317,17 +439,31 @@
 
 
 <!-- 
-  Title: 
+  
+Section 6: Sign up and pricing plans
+Title: 
+
+Plan 1: 
 
 
-(Alberto Duncan)
 
 
-(Joana Silva)
 
-I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
-(Milton Chapman)
 
+
+Plan 2: 
+
+
+
+
+
+Free delivery
+
+Plan 3: 
+
+
+
+Free delivery
 
 
  -->
