finished footer part

--- a/omnifood.html
+++ b/omnifood.html
@@ -430,7 +430,7 @@
 
 
   <!-- selected 被預設選的-->
-  <section class="form">
+  <section class="section-form">
     <div class="row">
       <h2>We're happy to hear from you</h2>
     </div>
@@ -519,6 +519,54 @@
 
       </form>
 
+    </div>
+
+  </section>
+
+
+  <!-- 最後頁尾 -->
+
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Android App</a></li>
+
+        </ul>
+      </div>
+
+      <div class="col span-1-of-2 ">
+
+        <ul class="socilmedia-link">
+          <li><a href="#">
+              <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
+            </a></li>
+          <li><a href="#">
+              <ion-icon name="logo-twitter" class="logo-twitte"></ion-icon>
+            </a></li>
+          <li><a href="#">
+              <ion-icon name="logo-google" class="logo-google"></ion-icon>
+            </a></li>
+          <li><a href="#">
+              <ion-icon name="logo-instagram" class="logo-instagram"></ion-icon>
+            </a></li>
+
+        </ul>
+
+
+      </div>
+      <div class="row">
+
+        <p>
+          copyright &copy; 2020 by Omnifood. All right reserved.
+        </p>
+
+      </div>
+
 
 
     </div>
@@ -527,10 +575,7 @@
 
 
 
-  </section>
-
-
-
+  </footer>
 
 
 
@@ -544,14 +589,14 @@
 
 <!-- 
   
-Section 7: Contact form
-Title: We're happy to hear from you
 
-Fields to include:
-Name
-Email
-How did you find us?
-Newsletter
-Drop us a line
+Navigation:
+1. About us
+2. Blog
+3. Press
+4. iOS App
+5. Android App
+
+Also include links to facebook, twitter, google+ and Instagram accounts.
 
  -->
