--- a/portfolio01.html
+++ b/portfolio01.html
@@ -158,13 +158,77 @@
       </div>
     </section>
 
+    <!--===== CONTACT =====-->
+    <section class="contact section" id="contact">
+      <h2 class="section-title">Contact</h2>
+
+      <div class="contact__container bd-grid">
+        <div class="contact__info">
+          <h3 class="contact__subtitle">EMAIL</h3>
+          <span class="contact__text">info.mail.com</span>
+
+          <h3 class="contact__subtitle">PHONE</h3>
+          <span class="contact__text">+20 999-999</span>
+
+          <h3 class="contact__subtitle">ADRESS</h3>
+          <span class="contact__text">My contry</span>
+
+        </div>
+        <form action="" class="contact__form">
+          <div class="contact__inputs">
+            <input type="text" placeholder="Name" class="contact__input">
+            <input type="mail" placeholder="Email" class="contact__input">
+          </div>
+
+          <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+
+          <input type="submit" value="Enter" class="contact__button">
+        </form>
+      </div>
 
 
-    <!--===== SCROLL REVEAL =====-->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    </section>
 
-    <!--===== MAIN JS =====-->
-    <script src="./js/portfolio01.js"></script>
+  </main>
+
+  <!--===== FOOTER =====-->
+  <footer class="footer section">
+    <div class="footer__container bd-grid">
+      <div class="footer__data">
+        <h2 class="footer__title">JHON DOE</h2>
+        <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
+      </div>
+
+      <div class="footer__data">
+        <h2 class="footer__title">EXPLORE</h2>
+        <ul>
+          <li><a href="#Home" class="footer__link">Home</a></li>
+          <li><a href="#about" class="footer__link">About</a></li>
+          <li><a href="#skills" class="footer__link">Skills</a></li>
+          <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
+          <li><a href="#Contact" class="footer__link">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__data">
+        <h2 class="footer__title">FOLLOW</h2>
+        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
+        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
+        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+      </div>
+
+
+    </div>
+  </footer>
+
+
+
+
+  <!--===== SCROLL REVEAL =====-->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!--===== MAIN JS =====-->
+  <script src="./js/portfolio01.js"></script>
 </body>
 
 </html>
