--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <!-- banner裡面涵蓋logo,btn -->
-        <div class="banner">
+        <div class="banner" hidden>
             <div class="logo">
                 <a href="#"><img src="./hamburger-images/logo.png" alt=""></a>
             </div>
@@ -28,12 +28,12 @@
 
         <div class="nav-wrapper">
             <div class="hamburger-menu">
-                <div class="linen line-1"></div>
-                <div class="linen line-2"></div>
-                <div class="linen line-3"></div>
+                <div class="line line-1"></div>
+                <div class="line line-2"></div>
+                <div class="line line-3"></div>
             </div>
 
-            <nav class="top-nav" hidden>
+            <nav class="top-nav">
                 <ul class="nav-list">
                     <li>
                         <a href="#" class="nav-link">Home</a>
