--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -36,24 +36,24 @@
             <nav class="top-nav">
                 <ul class="nav-list">
                     <li>
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link" data-text='Home'>Home</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">About As</a>
+                        <a href="#" class="nav-link" data-text='About As'>About As</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-lik">
+                        <a href="#" class="nav-link" data-text='Our Team'>
                             Our Team
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">
+                        <a href="#" class="nav-link" data-text='Services'>
                             Services
                         </a>
                     </li>
 
                     <li>
-                        <a href="#" class="nav-link">
+                        <a href="#" class="nav-link" data-text='Contanct'>
                             Contanct
                         </a>
                     </li>
@@ -64,7 +64,7 @@
 
 
 
-            <nav class="bottom-nav" hidden>
+            <nav class="bottom-nav">
                 <ul class="icons">
                     <li class="icon-itm">
                         <a href="#" class="icon-link">
