finished icon part

--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <!-- banner裡面涵蓋logo,btn -->
-        <div class="banner" hidden>
+        <div class="banner">
             <div class="logo">
                 <a href="#"><img src="./hamburger-images/logo.png" alt=""></a>
             </div>
@@ -66,47 +66,26 @@
 
             <nav class="bottom-nav">
                 <ul class="icons">
-                    <li class="icon-itm">
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-facebook-f">
-
-                            </i>
-                        </a>
+                    <li class="icon-item">
+                        <a href="#" class="icon-link"><i class="fab fa-facebook-f"></i></a>
                     </li>
-
-
-                    <li class="icon-itm">
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-youtube">
-
-                            </i>
-                        </a>
+                    <li class="icon-item">
+                        <a href="#" class="icon-link"><i class="fab fa-youtube"></i></a>
                     </li>
-
-
-                    <li class="icon-itm">
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-twitter">
-
-                            </i>
-                        </a>
+                    <li class="icon-item">
+                        <a href="#" class="icon-link"><i class="fab fa-twitter"></i></a>
                     </li>
-                    <li class="icon-itm">
-                        <a href="#" class="icon-link">
-                            <i class="fab fa-google-plus-g">
-
-                            </i>
-                        </a>
+                    <li class="icon-item">
+                        <a href="#" class="icon-link"><i class="fab fa-google-plus-g"></i></a>
                     </li>
-
                 </ul>
-
-
             </nav>
 
 
         </div>
     </div>
+
+
 
 
 
