--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -19,7 +19,7 @@
         <!-- banner裡面涵蓋logo,btn -->
         <div class="banner">
             <div class="logo">
-                <a href="#"><img src="./hamburger-images/logo.png" alt=""></a>
+                <a href="#"><img src="./h-images/logo.png" alt=""></a>
             </div>
             <div class="btn-wrapper">
                 <button class="banner-btn">Explore More</button>
